# login2022bot

./: .gitignore  Procfile  bot.py  database.py  pyproject.toml  requirements.txt  server.py  test.html
cogs/: dump.py  results.py  utils.py
data/: eventRoleMapping.json  logs.txt  lsuserrolemapping.json  role_list.json  userrolemapping.json
database/: db.py
template/: log.html
utils/: add_role_aumni.py  add_role_member.py  add_role_participant.py
